--- a/sec7.css
+++ b/sec7.css
@@ -2,7 +2,8 @@
     display:flex;
     flex-direction: column;
     align-items: center;
-    margin-top:200px;
+    margin-top:0px;
+    margin-bottom:0px;
 }
 .sec-8-1{
     display:flex;
@@ -23,6 +24,50 @@
     margin-bottom:20px;
     font-weight:600;
 }
+.sec-8 {
+    /* Makes the navbar black */
+    text-align: center;
+}
+
+.menu-bar1 {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 40px;
+}
+
+.sec-8 li a {
+    text-decoration: none;
+    font-size: 30px;
+   
+    color: black; /* White text for contrast */
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-around;
+    gap: 40px;                   
+    transition: color 0.3s;
+}
+
+.sec-8 li a:hover {
+    color: lightblue; /* Optional: hover effect */
+}
+
+.sec-8 span {
+    display: block;
+    color: black;
+    font-size: 16px;
+    align-items: center;
+    font-weight: 300;
+    text-align: center;
+    padding: 10px;
+    font-size:30px;
+}
+
 @media(max-width: 1024px){
     .sec-8{
         display:flex;
