--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,12 @@
     padding:0;
     margin:0;
 }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
     font-family:"Poppins", sans-serif; /* Use the Poppins font for the body */
     font-style:normal;
@@ -20,6 +26,8 @@ body {
    height: 70 px;
    padding: 0px 100px;
    padding-top:100px;
+   
+
     
 }
 .menu-bar{
@@ -29,6 +37,8 @@ body {
     color: black;
     text-decoration: none;
     width:60%;
+    position: relative; /* or fixed if sticky */
+    z-index: 999;
     justify-content: space-around;
 
 }
@@ -41,17 +51,17 @@ body {
 }
 .menu-bar li {
     text-decoration: none;
-    color: black;
     font-size: 20px;
     font-weight: 500;
 }
 a{
+    color: black;
     text-decoration: none;
-    color:black;
+    font-size: 30px; 
     transition: all 0.3s ease;
 }
 a:hover{
-    color:black;
+    
     text-decoration: underline;
     text-underline-offset: 10px;
     text-decoration-color:lightblue;
